<package>
  <name>image_publisher</name>
  <version>1.12.22</version>
  <description>
    <p>
      Contains a node publish an image stream from single image file
      or avi motion file.
    </p>
  </description>
  <author>Kei Okada ewenwan </author>
  <maintainer email="vincent.rabaud@gmail.com 1631684@tongji.edu.cn">Vincent Rabaud</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/image_publisher</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>camera_info_manager</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
  </export>
</package>
